# timer-count

./: .gitignore  COMO_GENERAR_DMG.md  COMO_USAR.md  INICIO_RAPIDO.md  INICIO_RAPIDO_PUBLICACION.md  PUBLICAR_EN_GITHUB.md  README.md  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  system_events.rs  tray_manager.rs
src-tauri/src/commands/: clients.rs  export.rs  mod.rs  notion.rs  projects.rs  sessions.rs  stats.rs  tray.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: Layout.tsx  TimerCard.tsx
src/hooks/: useTauriCommands.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: colors.ts  formatTime.ts
src/views/: Calendar.tsx  Clients.tsx  Dashboard.tsx  Projects.tsx  Reports.tsx  Settings.tsx  Stats.tsx  Tiempo.tsx  Timer.tsx  TrayManager.tsx
